# openchoreo

agents/sre-agent/: AE-HANDOFF-DESIGN.md  EXTENDING.md  RCA-AGENT-ENABLEMENT.md  pyproject.toml
agents/sre-agent/src/: config.py  main.py
agents/sre-agent/src/agent/: agent.py  fingerprint.py  handoff_logic.py  skills.py  tool_registry.py
agents/sre-agent/src/clients/: __init__.py  aep_reports.py  llm.py  mcp.py
agents/sre-agent/src/models/: __init__.py  handoff_result.py  rca_report.py
agents/sre-agent/src/skills/issue-fix/: SKILL.md
agents/sre-agent/src/templates/prompts/: handoff_agent_prompt.j2
agents/sre-agent/tests/: test_fingerprint.py  test_skills.py
install/helm/openchoreo-observability-plane/: values.yaml
